Fix(Overflow) - overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@
 
 body {
   background-color: #242424 !important;
-  overflow: hidden;
+  overflow-x: hidden;
 }
